tests/sumo/spec/departure/errors/speed_given50_ignore/rawdump.sumo.meso
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Wed Feb 19 22:17:12 2020 by Eclipse SUMO Version v1_5_0+0174-0b4d252505
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_routes.rou.xml,input_additional.add.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <netstate-dump value="rawdump.xml"/>
    </output>

    <time>
        <begin value="0"/>
        <end value="5"/>
    </time>

    <processing>
        <ignore-route-errors value="true"/>
        <default.speeddev value="0"/>
        <pedestrian.model value="nonInteracting"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

    <mesoscopic>
        <mesosim value="true"/>
    </mesoscopic>

</configuration>
-->

<netstate xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/netstate_file.xsd">
    <timestep time="0.00">
        <edge id="beg">
            <vehicle id="1" pos="0.00" speed="27.80"/>
        </edge>
    </timestep>
    <timestep time="1.00">
        <edge id="beg">
            <vehicle id="1" pos="0.00" speed="27.80"/>
        </edge>
    </timestep>
    <timestep time="2.00">
        <edge id="beg">
            <vehicle id="1" pos="0.00" speed="27.80"/>
        </edge>
    </timestep>
    <timestep time="3.00">
        <edge id="beg">
            <vehicle id="1" pos="0.00" speed="27.80"/>
        </edge>
    </timestep>
    <timestep time="4.00">
        <edge id="beg">
            <vehicle id="1" pos="100.00" speed="27.80"/>
        </edge>
    </timestep>
</netstate>
